network/ingress-nginx/ingress-nginx_example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    # Use an annotation for the rewrite rule
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: "example.com"
    http:
      paths:
      - path: /app/(.*)
        pathType: Prefix
        backend:
          service:
            name: app-service # Corresponds to your backend service name
            port:
              number: 8080 # Corresponds to your backend service port
